# YTP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: AnimatedSprite.hpp  AnimatedSpriteConfig.hpp  Directions.hpp  Enemy.hpp  Game.hpp  GameFonts.hpp  GameManager.hpp  GameRoom.hpp  GameSprites.hpp  GameTextures.hpp  MapBuilder.hpp  MapObject.hpp  Room.hpp  Spikes.hpp  Unit.hpp  debug.hpp
include/Elements/: Block.hpp  Button.hpp  GUIBlock.hpp  GUIButton.hpp  GUIObject.hpp  GUISimpleSprite.hpp  Object.hpp  SimpleSprite.hpp
include/Enemies/: AbstractEnemy.hpp  BlackHole.hpp  FireBall.hpp  FireMan.hpp  Spikes.hpp  Zombie.hpp
include/Scenes/: AbstractScene.hpp  Dungeon.hpp  MainMenu.hpp  RegistrationSuggest.hpp
server/: .editorconfig  .gitignore  README.md  captured_test.go  check_handler.go  config.go  config_test.go  flags.go  flags_test.go  functions.go  functions_test.go  getscore_handler.go  go.mod  go.sum  helptest_test.go  http_error_handler.go  http_error_handler_test.go  index_handler.go  index_handler_test.go  init.sql  key_handler.go  log.go  log_test.go  login_handler.go  logout_handler.go  main.go  main_test.go  non_tls_handler.go  non_tls_handler_test.go  score_handler.go  server.go  server_test.go  signup_handler.go  signup_handler_test.go  system.go  system_test.go  utils.go  utils_test.go
server/assets/: app.css
server/static/: browserconfig.xml  crossdomain.xml  manifest.json
server/templates/: error.html  index.html  layout.html  login.html  signup.html
src/: AnimatedSprite.cpp  Animation.cpp  Animation.hpp  BlackHole.cpp  Config.cpp  Config.hpp  Content.cpp  Content.hpp  Dungeon.cpp  Events.cpp  Events.hpp  FireBall.cpp  FireMan.cpp  GUIBlock.cpp  GUIButton.cpp  GUIObject.cpp  GUISimpleSprite.cpp  Game.cpp  Game.hpp  GameFonts.cpp  GameManager.cpp  GameRoom.cpp  GameSprites.cpp  GameTextures.cpp  Main.cpp  Main.hpp  MainMenu.cpp  MapBuilder.cpp  MapObject.cpp  Object.cpp  Object.hpp  RegistrationSuggest.cpp  Room.cpp  Scene.cpp  Scene.hpp  Spikes.cpp  Unit.cpp  Window.cpp  Window.hpp  Zombie.cpp
src/Animations/: Fade.cpp  Fade.hpp  Movement.cpp  Movement.hpp
src/Elements/: Block.cpp  Button.cpp  Object.cpp  SimpleSprite.cpp
src/Exceptions/: LoadException.cpp  LoadException.hpp
src/Objects/: Background.cpp  Background.hpp  Block.cpp  Block.hpp  Button.cpp  Button.hpp  Entity.cpp  Entity.hpp  Tiles.cpp  Tiles.hpp
src/Objects/Entities/: Player.cpp  Player.hpp
src/Scenes/: LoadScreen.cpp  LoadScreen.hpp  MainMenu.cpp  MainMenu.hpp  TileField.cpp  TileField.hpp
